# downtime-panda

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Caddyfile  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.staging.yml  dockerfile  index.html  mkdocs.yml  objects.inv  pyproject.toml
1-developer-guide/: index.html
2-architecture/: index.html
3-features/: index.html
4-future-developments/: index.html
architecture/: index.html
autoapi/downtime_panda/: index.html
autoapi/downtime_panda/blueprints/: index.html
autoapi/downtime_panda/blueprints/errors/: index.html
autoapi/downtime_panda/blueprints/home/: index.html
autoapi/downtime_panda/blueprints/service/: index.html
autoapi/downtime_panda/blueprints/subscription/: index.html
autoapi/downtime_panda/blueprints/token/: index.html
autoapi/downtime_panda/blueprints/user/: index.html
autoapi/downtime_panda/config/: index.html
autoapi/downtime_panda/extensions/: index.html
autoapi/summary/: index.html
database/migrations/: V20250514193420__crea_tabella_servizio.sql  V20250522193416__crea_tabella_ping.sql  V20250525113408__ping_aggiungi_on_update_e_on_delete.sql  V20250528172723__crea_tabella_utente.sql
developer-guide/: index.html
docs/: 1-developer-guide.md  2-architecture.md  2-developer-guide.md  3-architecture.md  3-features.md  4-features.md  4-future-developments.md  architecture.md  developer-guide.md  index.md
migrations/: env.py
migrations/versions/: 205be8f58c10_move_name_to_subscription.py  2fb8c8d409d7_ping_response_time.py  339378a5d318_bigint_to_int_for_sqlite.py  3c5d5af9ad2f_tokens_table.py  47f6d32c11b2_uuid_on_subscription_table.py  91d00fdb3a1a_initial_migration.py  e76f94629bb5_subscription_table.py
search/: search_index.json
src/downtime_panda/: __init__.py  app.py  config.py  extensions.py  model.py  scheduler.py
src/downtime_panda/blueprints/: __init__.py
src/downtime_panda/blueprints/api/: __init__.py  models.py  routes.py
src/downtime_panda/blueprints/errors/: routes.py
src/downtime_panda/blueprints/home/: __init__.py  routes.py  views.py
src/downtime_panda/blueprints/service/: __init__.py  api.py  forms.py  jobs.py  models.py  routes.py  views.py
src/downtime_panda/blueprints/subscription/: api.py  forms.py  messages.py  models.py  routes.py
src/downtime_panda/blueprints/token/: __init__.py  messages.py  models.py  routes.py
src/downtime_panda/blueprints/user/: __init__.py  forms.py  messages.py  model.py  models.py  routes.py  views.py
src/downtime_panda/service/: __init__.py  model.py  views.py
src/downtime_panda/static/: site.webmanifest
src/downtime_panda/templates/: base.html.jinja  index.html  index.html.jinja  login.html.jinja  macro.html.jinja  register.html.jinja  service_create.html.jinja  service_detail.html.jinja
src/downtime_panda/user/: __init__.py  model.py  views.py
tests/: conftest.py  test_subscription.py  test_subscription_api.py  test_token.py  test_user.py
user-guide/: index.html
(+43 files in other folders)
