[project]
name = "downtime-panda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikel12455", email = "105666282+Mikel12455@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "waitress>=3.0.2",
]

[project.scripts]
downtime-panda = "downtime_panda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "go-task-bin>=3.43.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
]

[tool.djlint]
profile = "jinja"
indent = 2
