[project]
name = "downtime-panda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikel12455", email = "105666282+Mikel12455@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "argon2-cffi>=23.1.0",
    "flask>=3.1.0",
    "flask-apscheduler>=1.13.1",
    "flask-httpauth>=4.8.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-moment>=1.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf[email]>=1.2.2",
    "loguru>=0.7.3",
    "psycopg[binary,pool]>=3.2.9",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "waitress>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "go-task-bin>=3.43.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
]

[tool.djlint]
profile = "jinja"
indent = 4
format_attribute_template_tags = true
format_js = false
